# pyloseq

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  docs.yml  publish.yml  tests.yml
docs/: containers.md  golden_files.md  index.md  migration.md  mkdocs.yml  quickstart.md
docs/api/: analysis.md  containers.md  core.md  datasets.md  diversity.md  exceptions.md  hypothesis.md  io.md  manipulation.md  ordination.md  phyla.md  plotting.md  pyloseq.md  testing.md
docs/notebooks/: 01_importing_data.ipynb  02_distances_and_ordination.ipynb  03_alpha_diversity.ipynb  04_preprocessing.ipynb  05_anndata_interop.ipynb  08_strano_2023_sponge_microbiome.ipynb  09_garrido_sanz_2025_rhizcom.ipynb  mcmurdie_holmes_2013.ipynb
notebooks/: 01_importing_data.ipynb  01_torondel_2016_pit_latrines.md  02_distances_and_ordination.ipynb  03_alpha_diversity.ipynb  04_preprocessing.ipynb  06_mcmurdie_holmes_2013.ipynb  07_torondel_2016_pit_latrines.ipynb  08_strano_2023_sponge_microbiome.ipynb  09_garrido_sanz_2025_rhizcom.ipynb
scripts/: Dockerfile.golden  generate_golden.R  requirements.R  test_container_install.sh
src/phyla/: __init__.py  _distances.py  _diversity.py  _exceptions.py  _manipulation.py  _ordination.py  _otu_table.py  _phyloseq.py  _refseq.py  _tax_table.py  _tree.py  plotting.py
src/phyla/io/: __init__.py  _biom.py  _csv.py  _mothur.py  _qiime1.py  _qza.py
src/phyla/testing/: __init__.py  fixtures.py
src/pyloseq/: __init__.py  _distances.py  _diversity.py  _hypothesis.py  _manipulation.py  _ordination.py  _otu_table.py  _phyloseq.py  _refseq.py  _sample_data.py  _tax_table.py  _tree.py  _utils.py  _validation.py  plotting.py
src/pyloseq/datasets/: __init__.py  fixtures.py
src/pyloseq/io/: __init__.py  _biom.py  _csv.py  _mothur.py  _qiime.py  _qiime1.py  _qza.py
src/pyloseq/testing/: __init__.py  fixtures.py
tests/: conftest.py  test_benchmarks.py  test_combine.py  test_containers.py  test_deseq2.py  test_distances.py  test_diversity.py  test_fixtures.py  test_gunifrac.py  test_hypothesis.py  test_interop.py  test_io.py  test_manipulation.py  test_ordination.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phyloseq.py  test_plotting.py  test_pruning.py  test_smoke.py  test_transform.py
tests/containers/: test_otu_table.py  test_phy_tree.py  test_ref_seq.py  test_sample_data.py  test_tax_table.py
tests/golden/: PROVENANCE.json
tests/golden/GlobalPatterns/: otu_table.parquet  phy_tree.nwk  sample_data.parquet  sample_sums.parquet  tax_table.parquet  taxa_sums.parquet
tests/golden/enterotype/: otu_table.parquet  sample_data.parquet  sample_sums.parquet  tax_table.parquet  (+1 more)
tests/io/: conftest.py  test_api.py  test_biom.py  test_csv.py  test_mothur.py  test_qiime1.py  test_qza.py
(+25 files in other folders)
