[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyloseq"
version = "1.0.0"
description = "A native Python port of R/Bioconductor phyloseq — PyData-native microbiome analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Michael Donovan", email = "m.p.donovan1014@gmail.com" }]
keywords = ["microbiome", "metagenomics", "bioinformatics", "phyloseq", "16S"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-bio>=0.7",
    "plotnine>=0.13",
    "pyarrow>=12",
    "pyyaml>=6",
    "biom-format>=2.1",
    "h5py>=3.9",
    "anndata>=0.10",
    "networkx>=3.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-benchmark>=4",
    "hypothesis>=6",
    "mypy>=1.9",
    "ruff>=0.4",
    "pre-commit>=3",
    "mkdocs-material>=9",
    "mkdocs-jupyter>=0.24",
    "mkdocstrings[python]>=0.25",
    "pandas-stubs",
    "types-PyYAML",
    "interrogate>=1.7",
    "nbconvert>=7",
    "nbformat>=5",
    "ipykernel>=6",
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests/}"
bench = "pytest tests/test_benchmarks.py --benchmark-only -v"
lint = "ruff check src tests"
fmt = "ruff format src tests"
typecheck = "mypy src/pyloseq"
doccheck = "interrogate src/pyloseq"
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"
nb-test = "pytest --nbval-lax docs/notebooks/"

[tool.hatch.envs.docs]
features = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["pyloseq"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyloseq.plotting"
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.interrogate]
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-init-method = true
ignore-setters = true
fail-under = 100
verbose = 0

[tool.hatch.build.targets.wheel]
packages = ["src/pyloseq"]
